--- a/Simulator/pom.xml
+++ b/Simulator/pom.xml
@@ -99,7 +99,16 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml</groupId>
+			<artifactId>jackson-module-hibernate</artifactId>
+			<version>1.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate4</artifactId>
+			<version>2.4.0-rc2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>Simulator</finalName>
