--- a/Simulator/src/main/resources/properties/log4j.properties
+++ b/Simulator/src/main/resources/properties/log4j.properties
@@ -1,11 +1,12 @@
+# Root logger option
+log4j.rootLogger=DEBUG, stdout
+
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} | %-5p | %t | %c:%L | %m%n
  
-# Root logger option
-log4j.rootLogger=DEBUG, stdout
+log4j.logger.org.springframework=info
+log4j.logger.org.tstraszewski=debug
 
-log4j.logger.org.springframework=INFO
-log4j.logger.org.tstraszewski=DEBUG, stdout
 
