--- a/Simulator/src/main/webapp/WEB-INF/web.xml
+++ b/Simulator/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,30 @@
       <servlet-name>mvc-dispatcher</servlet-name>
       <url-pattern>/rest/*</url-pattern>
    </servlet-mapping>
+   
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>
+            org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+    </filter>
+
+    <filter>
+        <filter-name>encoding-filter</filter-name>
+        <filter-class>
+            org.springframework.web.filter.CharacterEncodingFilter
+        </filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+   
    <welcome-file-list>
       <welcome-file>index.jsp</welcome-file>
    </welcome-file-list>
