--- a/Simulator/pom.xml
+++ b/Simulator/pom.xml
@@ -124,6 +124,11 @@
 			<artifactId>jackson-datatype-hibernate4</artifactId>
 			<version>2.4.0-rc2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>Simulator</finalName>
