--- a/Simulator/src/main/webapp/WEB-INF/web.xml
+++ b/Simulator/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,7 @@
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+	<!-->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -36,6 +37,15 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+-->
+	<session-config>
+	    <session-timeout>15</session-timeout>
+	    <tracking-mode>COOKIE</tracking-mode>
+	</session-config>
+
+	<listener>
+  		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+	</listener>
 	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
