Polaczenie MVC z widokiem

--- a/Simulator/src/main/webapp/WEB-INF/web.xml
+++ b/Simulator/src/main/webapp/WEB-INF/web.xml
@@ -18,9 +18,10 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>mvc-dispatcher</servlet-name>
+		<url-pattern>*.htm</url-pattern>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
-	<!-->
+	
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -37,18 +38,18 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
--->
-	<session-config>
+
+	<!-- <session-config>
 	    <session-timeout>15</session-timeout>
 	    <tracking-mode>COOKIE</tracking-mode>
-	</session-config>
+	</session-config> -->
 
 	<listener>
-  		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+     	<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
 	</listener>
 	
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>./pages/index.html</welcome-file>
 	</welcome-file-list>
 
 </web-app>
